[package]
name = "token-manager"
edition = "2021" 

[lib]
crate-type = ["cdylib", "lib"]
name = "token_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "1.9.28"
spl-associated-token-account = "1.0.3"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }

[dev-dependencies]
proptest = { version = "1.0" }